--- a/enigmacracker.ipynb
+++ b/enigmacracker.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRehNDs/FOLxuS4mtgi+UQ",
+      "authorship_tag": "ABX9TyNxOCMKM/3X+qqtkZwZ6yr2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 38,
       "metadata": {
         "id": "5oxWU7ZVSGHo"
       },
@@ -47,7 +47,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5ed5851e"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5ed5851e",
+        "outputId": "9abc4d1b-9d6d-4822-9e01-be9802bd8a56"
       },
       "source": [
         "# EnigmaCracker\n",
@@ -102,6 +106,7 @@
         "missing_vars = [var for var in required_env_vars if not os.getenv(var)]\n",
         "if missing_vars:\n",
         "    # Log and raise error for missing environment variables\n",
+        "    print(f\"Missing environment variables: {', '.join(missing_vars)}\")\n",
         "    logging.error(f\"Missing environment variables: {', '.join(missing_vars)}\")\n",
         "    raise EnvironmentError(f\"Missing environment variables: {', '.join(missing_vars)}\")\n",
         "\n",
@@ -176,15 +181,18 @@
         "                balance = int(data[\"result\"]) / 1e18\n",
         "                return balance\n",
         "            else:\n",
+        "                print(f\"Error getting balance: {data['message']}\")\n",
         "                logging.error(\"Error getting balance: %s\", data[\"message\"])\n",
         "                return 0\n",
         "        except Exception as e:\n",
         "            if attempt < retries - 1:\n",
+        "                print(f\"Error checking balance, retrying in {delay} seconds: {str(e)}\")\n",
         "                logging.error(\n",
         "                    f\"Error checking balance, retrying in {delay} seconds: {str(e)}\"\n",
         "                )\n",
         "                time.sleep(delay)\n",
         "            else:\n",
+        "                print(f\"Error checking balance: {str(e)}\")\n",
         "                logging.error(\"Error checking balance: %s\", str(e))\n",
         "                return 0\n",
         "\n",
@@ -199,11 +207,13 @@
         "            return balance / 100000000  # Convert satoshi to bitcoin\n",
         "        except Exception as e:\n",
         "            if attempt < retries - 1:\n",
+        "                print(f\"Error checking balance, retrying in {delay} seconds: {str(e)}\")\n",
         "                logging.error(\n",
         "                    f\"Error checking balance, retrying in {delay} seconds: {str(e)}\"\n",
         "                )\n",
         "                time.sleep(delay)\n",
         "            else:\n",
+        "                print(f\"Error checking balance: {str(e)}\")\n",
         "                logging.error(\"Error checking balance: %s\", str(e))\n",
         "                return 0\n",
         "\n",
@@ -211,6 +221,7 @@
         "def write_to_file(seed, BTC_address, BTC_balance, ETH_address, ETH_balance):\n",
         "    # Write the seed, address, and balance to a file in the script's directory\n",
         "    with open(wallets_file_path, \"a\") as f:\n",
+        "        print(f\"Seed: {seed}\\nAddress: {BTC_address}\\nBalance: {BTC_balance} BTC\\n\\nEthereum Address: {ETH_address}\\nBalance: {ETH_balance} ETH\\n\\n\")\n",
         "        log_message = f\"Seed: {seed}\\nAddress: {BTC_address}\\nBalance: {BTC_balance} BTC\\n\\nEthereum Address: {ETH_address}\\nBalance: {ETH_balance} ETH\\n\\n\"\n",
         "        f.write(log_message)\n",
         "        logging.info(f\"Written to file: {log_message}\")\n",
@@ -225,6 +236,11 @@
         "            BTC_address = bip44_BTC_seed_to_address(seed)\n",
         "            BTC_balance = check_BTC_balance(BTC_address)\n",
         "\n",
+        "            print(f\"Seed:{seed}\")\n",
+        "            print(f\"BTC address: {BTC_address}\")\n",
+        "            print(f\"BTC balance: {BTC_balance} BTC\")\n",
+        "            print(\"\")\n",
+        "\n",
         "            logging.info(f\"Seed: {seed}\")\n",
         "            logging.info(f\"BTC address: {BTC_address}\")\n",
         "            logging.info(f\"BTC balance: {BTC_balance} BTC\")\n",
@@ -238,6 +254,10 @@
         "                    \"The Etherscan API key must be set in the environment variables.\"\n",
         "                )\n",
         "            ETH_balance = check_ETH_balance(ETH_address, etherscan_api_key)\n",
+        "\n",
+        "            print(f\"ETH address: {ETH_address}\")\n",
+        "            print(f\"ETH balance: {ETH_balance} ETH\")\n",
+        "\n",
         "            logging.info(f\"ETH address: {ETH_address}\")\n",
         "            logging.info(f\"ETH balance: {ETH_balance} ETH\")\n",
         "\n",
@@ -247,30 +267,152 @@
         "\n",
         "            # Check if the address has a balance\n",
         "            if BTC_balance > 0 or ETH_balance > 0:\n",
+        "                print(f\"(!) Wallet with balance found!\")\n",
         "                logging.info(\"(!) Wallet with balance found!\")\n",
         "                write_to_file(seed, BTC_address, BTC_balance, ETH_address, ETH_balance)\n",
         "\n",
         "    except KeyboardInterrupt:\n",
+        "        print(\"Program interrupted by user. Exiting...\")\n",
         "        logging.info(\"Program interrupted by user. Exiting...\")\n",
         "\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Seed:buyer void example census rigid trim brick crucial uphold echo model start\n",
+            "BTC address: 19W98RvSAbn5ntLeNSWVxSjmwcRAqG2nBv\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0xd703680b7c7Cd0aDA90973809D2106c6FD6a74f5\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:biology today agent snake inside culture harvest cover income type just dismiss\n",
+            "BTC address: 17BLUa5dnQzRBW2bDpZmNASbJa5gGWfiKp\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x241149B2EebDcbBb0Fa372FDa8f1B64Ef7Ca9EbE\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:expose patch prefer borrow side food major combine settle remove palace use\n",
+            "BTC address: 1FLRZ8kme4762cqkFzxsK61uZVLpJZqiCY\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0xfC7f6a81ea266FCaC3b8398157EaB5b65c33B9c2\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:combine lion pizza source muscle flip file method chaos attack flush lava\n",
+            "BTC address: 1GUBx4Awm5VRcL7aTLron42h6sQpx7pDAu\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x05eAe4F546be8CE1F42a24f6B8854dBCD52D1081\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:ghost either horse make filter core include airport online effort scale rude\n",
+            "BTC address: 1A3wQYgUnefQRuivPv4eadP2ada3AxqE3\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x7C12f16691081D48972243dFfF4A169936a3e461\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:timber appear rabbit claim wild adjust athlete region else reunion exotic refuse\n",
+            "BTC address: 1PNBvTVdCDe1oRypyTQcgBUf7xgtVbxWwV\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x432aA650144A1d2524bbE009Cb2e6eb818897Fa1\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:away short dress vacuum potato concert noodle spoil mango giggle library siren\n",
+            "BTC address: 125sHmg1A6LzJC6empvjbbvmJkkHqiKPsT\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0xD67008949483A0672480D19C4A756eb8f194416b\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:sense reveal thumb bind biology love similar host assault uncle certain sea\n",
+            "BTC address: 14pU9Ez8EJjzpprC3z4wEwWdgfCeEL92cd\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x29F8c07b0769702eD1953361bE7b6D430861651B\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:mail pave proof horn imitate cloth basic settle online devote parrot acid\n",
+            "BTC address: 1NLM8YxGJDaUhoR3aLE9AT1KPwNBZPShLm\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x794A577AACD87797E51a4d102E23E0dd8e519ADd\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:topic wife caution access shift sword evil carbon tip post worry olympic\n",
+            "BTC address: 1EbmAeEse2J2Gz5waVHjK62gAMh9bNpbgd\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0xdEB02C38030a75699167180D47e56Ac170bEc17D\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:tent accident actress increase food evoke cook tornado crystal clog core oil\n",
+            "BTC address: 1AGz7n1rV3y12ARJMK3y5rSjUpJmGBAhNb\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x4C71029b64f5ebb26296D3A5c9820dD30dB8C5E7\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:session race scrap club year edge fork swap impact swamp ensure put\n",
+            "BTC address: 1CZXsWEoud4hbwcYa476bbMHy3Pt1RxamB\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0xbA7dd67157561dD0Bd563f400C7dfF83Ea05bd64\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:spoon patient fire sure ignore friend expire soul stay tank breeze equip\n",
+            "BTC address: 136tPjPUjQFZ8yDKhQFncsoogXdDaajjXx\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x83CB1004449E39030293d704306d727ADBD4a4f9\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:north increase master decrease destroy phone monkey fresh tomorrow left peanut photo\n",
+            "BTC address: 16gWHrYA6jEKdjdMjLE1rqR4W59YoQdaey\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x3276c4Cf4CB14DCc2EF36aa61FdC03f56d670AC1\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:choose bridge atom dice attitude marble witness minute clean bag embrace debris\n",
+            "BTC address: 1FRGZBF9dgzQQDAL8cmbsM5sLG17E2yL46\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x93208A5CC91b1F252Ea8E38c9B1fc109c678741E\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:tool ordinary jazz program sure ride muscle black ritual gun marine fuel\n",
+            "BTC address: 1AvfGdeZF7o4eHNmSekmL2SscXcJtmFHFa\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "ETH address: 0x77E4bBb536E6fD316974760e9B6EbD792fB86da8\n",
+            "ETH balance: 0.0 ETH\n",
+            "Seed:other bacon olympic engine vehicle skill garbage debate top castle muffin imitate\n",
+            "BTC address: 15kpRo98rquBcUKwqsSqcwDTZJSuQ6n1Bf\n",
+            "BTC balance: 0.0 BTC\n",
+            "\n",
+            "Program interrupted by user. Exiting...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "255a7476"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "255a7476",
+        "outputId": "3fe716b4-bcf5-40b3-88cb-f679dff4c0b9"
       },
       "source": [
         "# Esegui lo script Python\n",
         "!python /content/EnigmaCracker.py"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/bin/sh: 1: gnome-terminal: not found\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -281,7 +423,73 @@
         "# Visualizza il contenuto del file di log\n",
         "!cat /content/enigmacracker.log"
       ],
-      "execution_count": 5,
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bf854e2d"
+      },
+      "source": [
+        "# Visualizza il contenuto del file di log per confermare se è vuoto o meno\n",
+        "!cat /content/enigmacracker.log"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "472ef315",
+        "outputId": "cd339ff6-3a90-4189-9d7e-fb72300c4033"
+      },
+      "source": [
+        "import os\n",
+        "\n",
+        "source_file = '/content/enigmacracker.log'\n",
+        "destination_file = '/content/enigmacracker_copy.log'\n",
+        "\n",
+        "try:\n",
+        "    # Read the content of the source file\n",
+        "    with open(source_file, 'r') as f_source:\n",
+        "        log_content = f_source.read()\n",
+        "\n",
+        "    # Write the content to the destination file\n",
+        "    with open(destination_file, 'w') as f_dest:\n",
+        "        f_dest.write(log_content)\n",
+        "\n",
+        "    print(f\"Content of '{source_file}' copied to '{destination_file}' successfully.\")\n",
+        "\n",
+        "except FileNotFoundError:\n",
+        "    print(f\"Error: The file '{source_file}' was not found.\")\n",
+        "except Exception as e:\n",
+        "    print(f\"An error occurred: {e}\")"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Content of '/content/enigmacracker.log' copied to '/content/enigmacracker_copy.log' successfully.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cf948488"
+      },
+      "source": [
+        "# Visualizza il contenuto del file di log\n",
+        "!cat /content/enigmacracker.log"
+      ],
+      "execution_count": 44,
       "outputs": []
     }
   ]
